--- a/src/pages/price-list/commercial-dishwasher-repair-cost.astro
+++ b/src/pages/price-list/commercial-dishwasher-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -739,6 +740,479 @@ const title ="Commercial Dishwasher Repair Cost - Full Pricing Guide";
     </div>
     <Btn />
 
+
+
+
+
+
+
+
+
+
+
+    <div class="page213-content" >
+      <div class="content__page-full-hed">
+        <div class="content__page-hed-h">
+          <h2>
+            Cost to Repair a Commercial Dishwasher Depending on the Brand
+          </h2>
+        </div>
+        <div class="content__page-hed-desc"></div>
+      </div>
+
+      <div class="content__page-full-desc">
+        <div class="content__page-desc">
+          <h3>Hobart</h3>
+          <p>
+            Hobart is a renowned name in the commercial dishwasher industry,
+            known for its high-quality and durable machines. However, the
+            cost to repair a Hobart dishwasher can be relatively high due to
+            the premium nature of their parts and the specialized expertise
+            required for repairs. Typical repair costs for Hobart
+            dishwashers can range from <b>$200 to $1,000</b>, depending on
+            the issue at hand. Common repairs, such as replacing heating
+            elements or control boards, tend to be on the higher end due to
+            the sophisticated technology and robust materials used in Hobart
+            machines. Despite the higher repair costs, many businesses
+            consider it a worthwhile investment given the brand's reputation
+            for longevity and reliability.
+          </p>
+
+          <h3>Miele</h3>
+          <p>
+            Miele commercial dishwashers are known for their advanced
+            technology and efficient performance. Repairing a Miele
+            dishwasher can be somewhat costly, primarily due to the
+            specialized parts and the need for certified technicians. Repair
+            costs can range from <b>$250 to $800</b>, with more complex
+            issues like pump or motor replacements being more expensive.
+            Miele's emphasis on precision engineering means that their parts
+            are often more expensive, but they also offer exceptional
+            performance and durability. Businesses that use Miele
+            dishwashers often find that the higher repair costs are offset
+            by the machine's efficiency and long-term reliability.
+          </p>
+
+          <h3>Jackson</h3>
+          <p>
+            Jackson is a popular choice for many commercial kitchens due to
+            its balance of affordability and performance. Repair costs for
+            Jackson dishwashers are generally moderate, ranging from <b
+              >$150 to $600</b
+            >. Common repairs, such as replacing spray arms, door seals, or
+            filters, tend to be on the lower end of the cost spectrum. More
+            extensive repairs, like pump or motor replacements, can be
+            slightly higher but still relatively affordable compared to
+            premium brands. Jackson's widespread availability of parts and
+            the relatively straightforward design of their machines make
+            them a cost-effective option for many businesses.
+          </p>
+
+          <h3>Electrolux</h3>
+          <p>
+            Electrolux commercial dishwashers are known for their innovative
+            features and energy efficiency. Repairing an Electrolux
+            dishwasher can be moderately expensive, with costs ranging from <b
+              >$200 to $700</b
+            >. The brand's focus on high-tech components means that parts
+            like control boards and heating elements can be pricier.
+            Additionally, the need for skilled technicians familiar with
+            Electrolux's advanced systems can add to the overall repair
+            cost. However, the investment in repairing Electrolux
+            dishwashers is often justified by their cutting-edge technology
+            and the operational savings they provide through
+            energy-efficient performance.
+          </p>
+
+          <h3>Champion</h3>
+          <p>
+            Champion commercial dishwashers are valued for their robust
+            construction and reliable performance. Repair costs for Champion
+            dishwashers typically range from <b>$150 to $890</b>. The
+            brand's parts are generally affordable, and their machines are
+            designed for easy maintenance, which helps keep repair costs in
+            check. Common repairs, such as replacing door gaskets, spray
+            arms, or filters, are usually inexpensive. More significant
+            repairs, like motor or pump replacements, can be higher but
+            still reasonable. Champion's reputation for durability and the
+            availability of replacement parts make it a cost-effective
+            choice for many commercial kitchens.
+          </p>
+
+          <h3>CMA</h3>
+          <p>
+            CMA dishwashers are known for their simplicity and
+            cost-effectiveness, making them a popular choice for small to
+            mid-sized commercial kitchens. Repair costs for CMA dishwashers
+            are generally on the lower side, ranging from <b>$100 to $500</b
+            >. The straightforward design of CMA machines means that parts
+            are typically less expensive, and repairs can often be performed
+            quickly and easily. Common issues like replacing door seals,
+            spray arms, or drain hoses are relatively inexpensive. Even more
+            complex repairs, such as pump or motor replacements, tend to be
+            more affordable compared to other brands. CMA's focus on
+            practicality and ease of maintenance makes it a budget-friendly
+            option for many businesses.
+          </p>
+        </div>
+      </div>
+
+      <div class="content__page-full-logo-brand">
+        <div class="ph-logo-brand">
+          <div class="logo-brand logo-bran-ph-1">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/hobart.webp"
+                alt="Hobart"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-2">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/jackson.webp"
+                alt="Jackson"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-3">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/сhampion.webp"
+                alt="Champion"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-4">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/miele.webp"
+                alt="Miele"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-5">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/electrolux.webp"
+                alt="Electrolux"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-6">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/winterhalter.webp"
+                alt="Winterhalter"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-7">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/meiko.webp"
+                alt="Meiko"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-8">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/cma-dishmachines.webp"
+                alt="CMA Dishmachines"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-9">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/blakeslee.webp"
+                alt="Blakeslee"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-10">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/fagor.webp"
+                alt="Fagor"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-11">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/stero.webp"
+                alt="Stero"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-12">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/insinger.webp"
+                alt="Insinger"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-13">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/comenda.webp"
+                alt="Comenda"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-14">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/sammic.webp"
+                alt="Sammic"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-15">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/eurodib.webp"
+                alt="Eurodib"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-16">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/jet-tech.webp"
+                alt="Jet-Tech"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-17">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/lamber.webp"
+                alt="Lamber"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-18">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/american-dish-service.webp"
+                alt="American Dish Service"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-19">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/bosch.webp"
+                alt="Bosch"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-20">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/asko.webp"
+                alt="Asko"
+                loading="lazy"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="full-desc-logo-brand">
+          <p>Brands of Commercial Dishwasher we repair</p>
+
+          <div class="desc-logo-brand logo-bran-d-1">
+            <h3><a href="#">Hobart</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-2">
+            <h3><a href="#">Jackson</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-3">
+            <h3><a href="#">Champion</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-4">
+            <h3><a href="#">Miele</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-5">
+            <h3><a href="#">Electrolux</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-6">
+            <h3><a href="#">Winterhalter</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-7">
+            <h3><a href="#">Meiko</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-8">
+            <h3><a href="#">CMA Dishmachines</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-9">
+            <h3><a href="#">Blakeslee</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-10">
+            <h3><a href="#">Fagor</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-11">
+            <h3><a href="#">Stero</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-12">
+            <h3><a href="#">Insinger</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-13">
+            <h3><a href="#">Comenda</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-14">
+            <h3><a href="#">Sammic</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-15">
+            <h3><a href="#">Eurodib</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-16">
+            <h3><a href="#">Jet-Tech</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-17">
+            <h3><a href="#">Lamber</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-18">
+            <h3><a href="#">American Dish Service</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-19">
+            <h3><a href="#">Bosch</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-20">
+            <h3><a href="#">Asko</a></h3>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <Btn />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="maintenance">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-b">
@@ -936,3 +1410,4 @@ const title ="Commercial Dishwasher Repair Cost - Full Pricing Guide";
   </Container>
  
 <Cta />
+<LogoBrands />
