--- a/src/pages/price-list/commercial-oven-repair-cost.astro
+++ b/src/pages/price-list/commercial-oven-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -571,6 +572,397 @@ const title ="Commercial Oven Repair Cost - Full Pricing Guide - Tips";
       </div>
       <Btn />
 
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="page213-content" id="left-menu-6">
+        <div class="content__page-full-hed">
+          <div class="content__page-hed-h">
+            <h2>Cost to Repair a Commercial Oven Depending on the Brand</h2>
+          </div>
+          <div class="content__page-hed-desc"></div>
+        </div>
+
+        <div class="content__page-full-desc">
+          <div class="content__page-desc">
+            <h3>Vulcan</h3>
+            <p>
+              Vulcan is a highly reputable brand in the commercial kitchen industry, known for its durable and high-performance ovens. The cost to repair a Vulcan oven can vary significantly depending on the specific model and the nature of the repair. Minor repairs, such as replacing a thermostat or igniter, may cost between <b>$200 and $500</b>. However, more extensive repairs involving electrical components or control boards can escalate to <b>$1,000</b> or more. The availability of parts and the complexity of the repair process also play a crucial role in determining the overall cost. Given Vulcan's robust construction and advanced technology, repairs often require specialized knowledge, which can add to labor costs.
+            </p>
+
+            <h3>Hobart</h3>
+            <p>
+              Hobart is another leading brand in commercial kitchen equipment, renowned for its reliability and advanced features. Repair costs for Hobart ovens can range from <b>$250</b> to <b>$600</b> for common issues like heating element replacements or door gasket repairs. More intricate problems involving electronic controls or gas supply systems can push the cost upwards of <b>$1,200</b>. The brand's extensive network of authorized service providers ensures that parts are readily available, but the specialized nature of some components can make repairs more expensive. Hobart's reputation for longevity means that investing in quality repairs can be a cost-effective choice in the long run.
+            </p>
+
+            <h3>Blodgett</h3>
+            <p>
+              Blodgett ovens are a staple in many commercial kitchens, praised for their durability and consistent performance. Repair costs for Blodgett ovens typically start around <b>$200</b> for simpler fixes, such as replacing fan motors or thermostats. If the issue involves more complex components like control boards or gas valves, the cost can climb to <b>$1,000</b> or more. Blodgett's extensive range of models means that parts availability is generally good, but older models may require more expensive, hard-to-find components. The brand's emphasis on robust construction often means that repairs are straightforward but may require specialized tools and expertise, impacting labor costs.
+            </p>
+
+            <h3>Garland</h3>
+            <p>
+              Garland is synonymous with premium quality in the commercial oven market, offering a range of features designed for high-performance kitchens. Repairing a Garland oven can be relatively costly, with minor repairs starting at around <b>$300</b> and more complex issues potentially exceeding <b>$1,500</b>. The brand's advanced technology and high-end components often necessitate specialized service, which can drive up both parts and labor costs. However, Garland's commitment to quality means that investing in repairs can extend the lifespan of the equipment, making it a worthwhile expenditure for many commercial kitchens.
+            </p>
+
+            <h3>TurboChef</h3>
+            <p>
+              TurboChef is known for its innovative, high-speed cooking ovens, which are widely used in fast-paced commercial environments. The cost to repair a TurboChef oven can be on the higher end due to the advanced technology involved. Simple repairs, such as replacing a door seal or a minor sensor, may range from <b>$300 to $700</b>. More complex repairs involving the oven's control system or high-speed cooking components can easily exceed <b>$1,500</b>. The brand's specialized nature often requires technicians with specific expertise, adding to labor costs. However, the efficiency and speed provided by TurboChef ovens make these repairs a valuable investment for businesses that rely on quick service.
+            </p>
+
+            <h3>Rational</h3>
+            <p>
+              Rational is a leader in the commercial oven market, particularly known for its combi ovens that combine steam and convection cooking. Repair costs for Rational ovens can be relatively high due to the sophisticated technology and multifunctional components. Minor repairs, such as replacing a temperature probe or cleaning a clogged steam generator, can start around <b>$400</b>. More complex issues, like problems with the control panel or steam injection system, can easily reach <b>$2,000</b> or more. The advanced nature of Rational ovens often requires highly specialized technicians, contributing to higher labor costs. However, the brand's focus on efficiency and versatility makes these repairs a valuable long-term investment.
+            </p>
+
+          </div>
+        </div>
+
+        <div class="content__page-full-logo-brand">
+          <div class="ph-logo-brand">
+            
+            <div class="logo-brand logo-bran-ph-1">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/vulcan.webp"
+                  alt="Vulcan"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-2">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/blodgett.webp"
+                  alt="Blodgett"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-3">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/garland.webp"
+                  alt="Garland"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-4">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/southbend.webp"
+                  alt="Southbend"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-5">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/turbochef.webp"
+                  alt="TurboChef"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-6">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/lincoln.webp"
+                  alt="Lincoln"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-7">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/hobart.webp"
+                  alt="Hobart"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-8">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/bakers-pride.webp"
+                  alt="Bakers Pride"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-9">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/imperial.webp"
+                  alt="Imperial"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-10">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/wolf.webp"
+                  alt="Wolf"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-11">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/doyon.webp"
+                  alt="Doyon"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-12">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/lang.webp"
+                  alt="Lang"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-13">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/star-manufacturing.webp"
+                  alt="Star Manufacturing"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-14">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/сleveland.webp"
+                  alt="Cleveland"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-15">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/moffat.webp"
+                  alt="Moffat"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-16">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/middleby-marshall.webp"
+                  alt="Middleby Marshall"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-17">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/american-range.webp"
+                  alt="American Range"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-18">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/montague.webp"
+                  alt="Montague"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-19">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/toastmaster.webp"
+                  alt="Toastmaster"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+          </div>
+
+          <div class="full-desc-logo-brand">
+            <p>Brands of Commercial Oven we repair</p>
+
+            <div class="desc-logo-brand logo-bran-d-1">
+              <h3><a href="#">Vulcan</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-2">
+              <h3><a href="#">Blodgett</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-3">
+              <h3><a href="#">Garland</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-4">
+              <h3><a href="#">Southbend</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-5">
+              <h3><a href="#">TurboChef</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-6">
+              <h3><a href="#">Lincoln</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-7">
+              <h3><a href="#">Hobart</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-8">
+              <h3><a href="#">Bakers Pride</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-9">
+              <h3><a href="#">Imperial</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-10">
+              <h3><a href="#">Wolf</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-11">
+              <h3><a href="#">Doyon</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-12">
+              <h3><a href="#">Lang</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-13">
+              <h3><a href="#">Star Manufacturing</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-14">
+              <h3><a href="#">Cleveland</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-15">
+              <h3><a href="#">Moffat</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-16">
+              <h3><a href="#">Middleby Marshall</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-17">
+              <h3><a href="#">American Range</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-18">
+              <h3><a href="#">Montague</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-19">
+              <h3><a href="#">Toastmaster</a></h3>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <Btn />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <div class="maintenance">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
@@ -887,4 +1279,4 @@ const title ="Commercial Oven Repair Cost - Full Pricing Guide - Tips";
     </main>
   </Container>
   <Cta />
- 
+  <LogoBrands />
